# TestLLVMASTPlugin

./: .gitignore  CMakeLists.txt  NamingPlugin.cpp  NamingPlugin.h  README.md  main.cpp  test.cpp  test.h  test_main.cpp
AOPInjectionPass/: AOPInjectionPass.cpp  AOPInjectionPass.h  CMakeLists.txt
AutoLoadAOPInjectionPass/: AutoLoadAOPInjectionPass.cpp  AutoLoadAOPInjectionPass.h  CMakeLists.txt
AutoLoadAOPInjectionPassV2/: AutoLoadAOPInjectionPassV2.cpp  AutoLoadAOPInjectionPassV2.h  CMakeLists.txt
InstructionCountPass/: CMakeLists.txt  InstructionCountPass.cpp  InstructionCountPass.h
OptionalGuard/: CMakeLists.txt  OptionalGuardPlugin.cpp  OptionalGuardPlugin.h
test/: CMakeLists.txt  function_pass_test.cpp  input_auto_aop_pass_v2.cpp  input_shared_from_this_in_cons.cpp  option_test_main.cpp  static_injection_test.cc  test_main.cpp
